--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "countries-list": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.9.1",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
