--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "countries-list": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^7.0.0",
     "mdbreact": "^5.2.0",
     "rc-slider": "^10.5.0",
