--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -30,6 +35,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "stripe": "^14.9.0",
+    "styled-components": "^6.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
