--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-youtube": "^10.1.0",
     "redux": "^5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
