--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.12.5",
     "axios": "^1.6.2",
     "countries-list": "^3.0.6",
     "js-cookie": "^3.0.5",
