--- a/.github/workflows/build-and-push-docker.yaml
+++ b/.github/workflows/build-and-push-docker.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - run: npm install -D esbuild
+      - run: npm install -f
       - run: npm run build        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
